<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.VistaPrenotazioneRistorante">

    <TextView
        android:id="@+id/vista_prenotazione_ristorante_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/vista_prenotazione_ristorante_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <Button
        android:id="@+id/prenotazione_ristorante_confermate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confermate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/prenotazione_ristorante_richieste"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/prenotazione_ristorante_richieste"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/richieste"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/prenotazione_ristorante_passate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/prenotazione_ristorante_confermate" />

    <Button
        android:id="@+id/prenotazione_ristorante_passate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/passate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/prenotazione_ristorante_richieste" />

    <ScrollView
        android:id="@+id/prenotazione_ristorante_content"
        android:layout_width="409dp"
        android:layout_height="630dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="52dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>